# Projet-1

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml
app/: __init__.py  main.py  moncsv.csv
app/modules/: __init__.py  mon_module.py
docs/source/: changelog.rst  code_of_conduct.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  usage.rst
docs/source/api/: app.rst  modules.rst
tests/: __init__.py  test_main.py  test_math_csv.py
